--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,36 +1,27 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="author" content="colorlib.com">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,800" rel="stylesheet" />
-    <link href="css/main.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div class="s006">
-      <form>
-        <fieldset>
-          <legend>Vilket väder blir det idag?</legend>
-          <div class="inner-form">
-            <div class="input-field">
-              <button class="btn-search" type="button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                  <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                </svg>
-              </button>
-              <input id="search" type="text" placeholder="" value="" />
-            </div>
-          </div>
-          <div class="suggestion-wrap">
-            <span>Helsingborg</span>
-            <span>Malmö</span>
-            <span>Landskrona</span>
-            <span>Lund</span>
-            <span>Kristianstad</span>
-          </div>
-        </fieldset>
-      </form>
+<head>
+  <title>Weather Forecast</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body>
+  <div class="background">
+    <div class="overlay"></div>
+    <div class="content">
+      <h1>Vilket väder blir det idag?</h1>
+      <div class="search-bar">
+        <input type="text" id="search" name="search">
+        <button onclick="search()">Search</button>
+      </div>
+      <div class="suggestions">
+        <button onclick="quickSearch('Helsingborg')">Helsingborg</button>
+        <button onclick="quickSearch('Lund')">Lund</button>
+        <button onclick="quickSearch('Malmö')">Malmö</button>
+        <button onclick="quickSearch('Landskrona')">Landskrona</button>
+        <button onclick="quickSearch('Ängelholm')">Ängelholm</button>
+      </div>
     </div>
-  </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+  </div>
+  <script src="js/script.js"></script>
+</body>
 </html>
