--- a/frontend/search.html
+++ b/frontend/search.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="css/style.css">
-      </head>
+<head>
+    <title>Weather Forecast</title>
+    <link rel="stylesheet" href="css/main.css">
+</head>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-<div class="card">
-
-    <h2>Brussels</h2>
-    <h3>Cloudy<span>Wind 10km/h <span class="dot">•</span> Precip 0%</span></h3>
-    <h1>23°</h1>
-    <div class="sky">
-        <div class="sun"></div>
-        <div class="cloud">
-            <div class="circle-small"></div>
-            <div class="circle-tall"></div>
-            <div class="circle-medium"></div>
+    <div class="background">
+        <div class="overlay"></div>
+        <div class="content">
+            <div class="card">
+                <h2>Brussels</h2>
+                <h3>Cloudy<span>Vind 10 m/s<span class="dot">   •   </span> Regn 0%</span></h3>
+                <h1>23°</h1>
+                <div class="sky">
+                    <div class="sun"></div>
+                    <div class="cloud">
+                        <div class="circle-small"></div>
+                        <div class="circle-tall"></div>
+                        <div class="circle-medium"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-
 </body>
 <script src="script.js"></script>
 </html>
