--- a/frontend/search.html
+++ b/frontend/search.html
@@ -10,7 +10,7 @@
         <div class="content">
             <div class="card">
                 <h2>Brussels</h2>
-                <h3>Cloudy<span>Vind 10 m/s<span class="dot">   •   </span> Regn 0%</span></h3>
+                <h3>Cloudy<span>Vind 10 m/s<span class="dot">•</span> Regn 0%</span></h3>
                 <h1>23°</h1>
                 <div class="sky">
                     <div class="sun"></div>
@@ -24,5 +24,5 @@
         </div>
     </div>
 </body>
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </html>
