dynmaisk html och setup för api anrop

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
       <h1>Vilket väder blir det idag?</h1>
       <div class="search-bar">
         <input type="text" id="search" name="search">
-        <button onclick="search()">Search</button>
+        <button id="search-button" onclick="search()">Search</button>
       </div>
       <div class="suggestions">
         <button onclick="quickSearch('Helsingborg')">Helsingborg</button>
