--- a/frontend/search.html
+++ b/frontend/search.html
@@ -8,6 +8,8 @@
     <div class="background">
         <div class="overlay"></div>
         <div class="content">
+            <main></main>
+            <!--
             <div class="card">
                 <h2>Brussels</h2>
                 <h3>Cloudy<span>Vind 10 m/s<span class="dot">•</span> Regn 0%</span></h3>
@@ -21,6 +23,7 @@
                     </div>
                 </div>
             </div>
+            -->
         </div>
     </div>
 </body>
